argocd_applications/security/keycloak/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: security
  labels:
    app: keycloak
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: keycloak
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak-discovery
  namespace: security
  labels:
    app: keycloak
spec:
  clusterIP: None
  type: ClusterIP
  ports:
  - port: 7800
    targetPort: 7800
    protocol: TCP
    name: jgroups
  selector:
    app: keycloak
